ajustando arquivos para execucao maven via linha de comando